--- a/src/app/ui/Navbar/Navbar.module.scss
+++ b/src/app/ui/Navbar/Navbar.module.scss
@@ -15,15 +15,15 @@
   min-width: 533px;
 }
 
+.logo {
+  height: 65px !important;
+  width: 92px !important;
+}
+
 .logoWrapper {
   display: flex;
   align-items: center;
   width: 240px;
-}
-
-.logo {
-  height: 60px;
-  // width: 150px;
 }
 
 .logoText {
