--- a/src/app/ui/Footer/Footer.module.scss
+++ b/src/app/ui/Footer/Footer.module.scss
@@ -9,23 +9,7 @@
 }
 
 .logo {
-  height: 130px;
-  width: 240px;
+  height: 130px !important;
+  width: 240px !important;
   margin-bottom: 20px;
 }
-
-// .footerLinks {
-//   display: flex;
-//   justify-content: center;
-//   margin-bottom: 20px;
-//   gap: 20px;
-// }
-
-// .footerLink {
-//   color: #ECF0F1;
-//   text-decoration: none;
-// }
-
-// .footerLink:hover {
-//   color: rgb(34, 38, 41);
-// }
